마이페이지 작업중

--- a/researchf/src/assets/scss/_my-account.scss
+++ b/researchf/src/assets/scss/_my-account.scss
@@ -190,3 +190,66 @@
     }
   }
 }
+.contact-info-wrap1 {
+  padding: 10px;
+
+  background-color: #f3f3f3;
+  @media #{$lg-layout} {
+    padding: 120px 20px 116px 40px;
+  }
+  @media #{$md-layout} {
+    padding: 120px 20px 116px 30px;
+  }
+  @media #{$xs-layout} {
+    margin-top: 20px;
+    margin-bottom: 30px;
+    padding: 50px 20px 45px 30px;
+  }
+  .single-contact-info {
+    display: flex;
+    align-items: center;
+
+    margin-bottom: 40px;
+    .contact-icon {
+      margin-right: 20px;
+      i {
+        font-size: 20px;
+        line-height: 40px;
+
+        display: inline-block;
+
+        width: 40px;
+        height: 40px;
+
+        transition: all 0.3s ease 0s;
+        text-align: center;
+
+        color: #252525;
+        border: 1px solid #252525;
+        border-radius: 100%;
+      }
+    }
+    .contact-info-dec {
+      p {
+        line-height: 1;
+
+        margin: 0 0 9px;
+
+        color: #404040;
+        a {
+          color: #404040;
+          &:hover {
+            color: $theme-color;
+          }
+        }
+        &:last-child {
+          margin: 0;
+        }
+      }
+    }
+    &:hover .contact-icon i {
+      color: #fff;
+      background-color: #252525;
+    }
+  }
+}
