--- a/researchf/src/assets/scss/_my-account.scss
+++ b/researchf/src/assets/scss/_my-account.scss
@@ -263,7 +263,40 @@
   padding: "10px 0px";
   margin-bottom: 20px;
 }
-.myaccount-form {
+.prj-sts-btn {
+  width: 150px;
+  height: 50px;
+  margin: auto;
+  border: none;
+  background-color: #404040;
+  color: #eee;
+}
+.prj-more-btn {
+  width: 20px;
+  height: 50px;
+  margin: auto;
+  border: none;
+}
+.prj-cont {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+}
+.my-project-card {
+  width: 100%;
+  height: 170px;
+  padding: 10px 0px;
+  border: 1px solid #c8c8c8;
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+  img {
+    width: 120px;
+    height: 120px;
+    margin: 0px 20px;
+  }
+}
+.myproject-form {
   padding: 10px;
   height: 100%;
 
