--- a/researchf/src/assets/scss/_my-account.scss
+++ b/researchf/src/assets/scss/_my-account.scss
@@ -266,7 +266,6 @@
 .prj-sts-btn {
   width: 150px;
   height: 50px;
-  margin: auto;
   border: none;
   background-color: #404040;
   color: #eee;
@@ -278,7 +277,7 @@
   border: none;
 }
 .prj-cont {
-  width: 40%;
+  width: 50%;
   display: flex;
   flex-direction: column;
 }
@@ -293,6 +292,7 @@
   height: 170px;
   padding: 10px 0px;
   border: 1px solid #c8c8c8;
+  background-color: #fff;
   display: flex;
   align-items: center;
   margin-bottom: 20px;
@@ -305,8 +305,9 @@
 .myproject-form {
   padding: 10px;
   height: 100%;
+  // overflow: scroll;
 
-  background-color: #f3f3f3;
+  background-color: #ffffff;
   @media #{$lg-layout} {
     padding: 50px 50px 50px 50px;
   }
@@ -451,8 +452,9 @@ input:checked ~ .checkmark:after {
   height: 600px;
   position: fixed;
   z-index: 2;
-  top: 25%;
-  left: 35%;
+  top:50%;
+  left:50%;
+  transform: translate(-50%, -50%);
 }
 .project-modal-header {
   height: 50px;
@@ -490,8 +492,19 @@ input:checked ~ .checkmark:after {
   padding: 15px;
   margin: 20px 0px;
 }
+.project-modal-prev {
+  position: absolute;
+  bottom: 1px;
+  width: 150px;
+  height: 50px;
+  margin: auto;
+  border: none;
+  background-color: #404040;
+  color: #ffffff;
+}
 .project-modal-next {
-  position: inherit;
+  position: absolute;
+  bottom: 1px;
   right: 40px;
   width: 150px;
   height: 50px;
