--- a/researchf/src/assets/scss/_my-account.scss
+++ b/researchf/src/assets/scss/_my-account.scss
@@ -319,7 +319,7 @@
   width: 100%;
   height: 170px;
   padding: 10px 0px;
-  border: 1px solid #c8c8c8;
+  border: 1px solid #e9e9e9;
   background-color: #fff;
   display: flex;
   align-items: center;
@@ -340,7 +340,7 @@
   width: 100%;
   height: 325px;
   padding: 10px 0px;
-  border-top: 1px solid #c8c8c8;
+  border-top: 1px solid #e9e9e9;
   background-color: #fff;
   display: flex;
   align-items: center;
@@ -372,7 +372,7 @@
     background-color:#fff;
   }
   select {
-    border: 1px solid #c8c8c8;
+    border: 1px solid #e9e9e9;
     width: 100%;
     height: 40px;
     color: #757575;
@@ -484,13 +484,13 @@
   left: 0;
   height: 25px;
   width: 25px;
-  background-color: #c8c8c8;
+  background-color: #e9e9e9;
   border-radius: 50%;
 }
 
 /* On mouse-over, add a grey background color */
 input ~ .checkmark {
-  background-color: #c8c8c8;
+  background-color: #e9e9e9;
 }
 
 /* When the checkbox is checked, add a blue background */
@@ -571,7 +571,7 @@ input:checked ~ .checkmark:after {
   font-weight: 600;
 }
 .project-modal-box {
-  border: 1px solid #c8c8c8;
+  border: 1px solid #e9e9e9;
   padding: 15px;
   margin: 20px 0px;
 }
@@ -618,14 +618,14 @@ input:checked ~ .checkmark:after {
   color: #eee;
 }
 .project-modal-select {
-  border: 1px solid #c8c8c8;
+  border: 1px solid #e9e9e9;
   width: 200px;
   height: 35px;
   margin: 0 10px;
 }
 .project-modal-cont {
   margin: 10px;
-  border: 1px solid #c8c8c8;
+  border: 1px solid #e9e9e9;
   width: 475px;
 }
 .project-modal-text {
@@ -645,7 +645,7 @@ input:checked ~ .checkmark:after {
   display: flex;
 }
 .purchase-status-card {
-  border: 1px solid #c8c8c8;
+  border: 1px solid #e9e9e9;
   width: 200px;
   height: 200px;
   margin-right: 20px;
