--- a/researchf/src/assets/scss/_footer.scss
+++ b/researchf/src/assets/scss/_footer.scss
@@ -16,10 +16,10 @@
   }
   p {
     letter-spacing: 0.9px;
-
-    color: #313131;
+    font-weight:600;
+    color: #ffffff;
     a {
-      color: #313131;
+      color: #ffffff;
       &:hover {
         color: $theme-color;
       }
@@ -47,7 +47,7 @@
 
       margin: 0 0 16px;
 
-      color: #313131;
+      color: #fff;
     }
   }
   .footer-list {
@@ -60,7 +60,7 @@
         a {
           letter-spacing: 0.3px;
 
-          color: #5d5d5d;
+          color: #fff;
           &:hover {
             color: $theme-color;
           }
@@ -272,6 +272,7 @@
 
 .footer-area {
   position: relative;
+  background-color: #5A5A5A;
   &.ml-10 {
     margin-left: 0;
   }
