--- a/researchf/src/assets/scss/_my-account.scss
+++ b/researchf/src/assets/scss/_my-account.scss
@@ -272,12 +272,17 @@
   border: none;
   background-color: #404040;
   color: #eee;
+  cursor: text !important;
 }
 .prj-more-btn {
-  width: 20px;
+  width: 50px;
   height: 50px;
   margin: auto;
   border: none;
+}
+.prj-btn-box {
+  width: 15%;
+  text-align: center;
 }
 .prj-cont {
   width: 50%;
@@ -378,6 +383,15 @@
     color: #757575;
     padding-left: 5px;
   }
+}
+.edit-box {
+  width: 100px;
+  height: 100px;
+  padding: 20px;
+  text-align: center;
+  position: absolute;
+  margin-left: 2%;
+  background-color: #e0e0e0;
 }
 .service-insert-btn {
   position: relative;
