--- a/researchf/src/assets/scss/_my-account.scss
+++ b/researchf/src/assets/scss/_my-account.scss
@@ -289,6 +289,10 @@
   display: flex;
   flex-direction: column;
 }
+.img-cont {
+  width: 50%;
+  display: flex;
+}
 .myproject-title h2{
   font-weight: 600;;
 }
@@ -329,6 +333,22 @@
   display: flex;
   align-items: center;
   margin-bottom: 20px;
+  img {
+    width: 120px;
+    height: 120px;
+    margin: 0px 20px;
+  }
+}
+.my-service-image {
+  width: 100%;
+  height: 170px;
+  padding: 10px 0px;
+  border: 1px solid #e9e9e9;
+  background-color: #fff;
+  display: flex;
+  align-items: baseline;
+  margin-bottom: 20px;
+  flex-direction: column;
   img {
     width: 120px;
     height: 120px;
