--- a/researchf/src/assets/scss/_my-account.scss
+++ b/researchf/src/assets/scss/_my-account.scss
@@ -266,6 +266,13 @@
   padding: "10px 0px";
   margin-bottom: 20px;
 }
+.btn-delete {
+  background-color: white;
+  border: none;
+  position: relative;
+  top: -50px;
+  left: -30px;
+}
 .prj-sts-btn {
   width: 150px;
   height: 50px;
