--- a/researchf/src/assets/scss/_my-account.scss
+++ b/researchf/src/assets/scss/_my-account.scss
@@ -411,6 +411,49 @@
     padding-left: 5px;
   }
 }
+.my-portf-insert {
+  width: 100%;
+  height: 650px;
+  padding: 10px 0px;
+  border-top: 1px solid #e9e9e9;
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+  flex-direction: column;
+  img {
+    width: 120px;
+    height: 120px;
+    margin: 0px 20px;
+  }
+  .input-row {
+    width: 100%;
+    display: flex;
+    padding: 15px;
+    thead, tbody, tfoot, tr, td, th {
+      border-style: none;
+    }
+  }
+  label {
+    width: 20%;
+    display: table;
+  }
+  h4 {
+    display: table-cell;
+    vertical-align: middle;
+    font-weight: 600;
+  }
+  input {
+    background-color:#fff;
+  }
+  select {
+    border: 1px solid #e9e9e9;
+    width: 100%;
+    height: 40px;
+    color: #757575;
+    padding-left: 5px;
+  }
+}
 .edit-box {
   width: 100px;
   height: 100px;
