--- a/researchf/src/assets/scss/_product-details.scss
+++ b/researchf/src/assets/scss/_product-details.scss
@@ -105,14 +105,18 @@
   width:80%;
 }
 
+.description-review-wrapper {
+  width:70%;
+}
+
 .description-review-topbar {
   display: flex;
-  justify-content: center;
+  //justify-content: center;
 
   border-bottom: 1px solid #d7d7d7;
   .nav-item {
     a {
-      font-size: 24px;
+      font-size: 15px;
       font-weight: 500;
       line-height: 1;
 
