--- a/researchf/src/assets/scss/_header.scss
+++ b/researchf/src/assets/scss/_header.scss
@@ -2,6 +2,8 @@
 
 .header-area {
   position: relative;
+  border-bottom: 1px solid #e4e5ed;
+  background-color: #ffffff;
   &.header-absolute {
     position: absolute;
     z-index: 99;
@@ -19,6 +21,8 @@
 
 .sticky-bar.stick {
   position: fixed;
+  border-bottom: 1px solid #e4e5ed;
+  background-color: #ffffff;
   z-index: 999;
   top: 0;
   left: 0;
