--- a/researchf/src/assets/scss/_my-account.scss
+++ b/researchf/src/assets/scss/_my-account.scss
@@ -276,10 +276,11 @@
 .prj-sts-btn {
   width: 150px;
   height: 50px;
-  border: none;
-  background-color: #404040;
-  color: #eee;
-  cursor: text !important;
+  border: 1px solid #eee;
+  color: #4B4B4B;
+  font-weight: 600;
+  border-radius: 10px;
+  font-size: 15px;
 }
 .prj-more-btn {
   width: 50px;
@@ -332,14 +333,14 @@
   flex-direction: column;
 }
 .my-project-card {
-  width: 100%;
+  width: 93%;
   height: 170px;
   padding: 10px 0px;
-  border: 1px solid #e9e9e9;
+  border-bottom: 1px solid #e9e9e9;
   background-color: #fff;
   display: flex;
   align-items: center;
-  margin-bottom: 20px;
+  margin: 20px;
   img {
     width: 120px;
     height: 120px;
@@ -472,6 +473,7 @@
 .myproject-form {
   padding: 10px;
   height: 100%;
+  border: 1px solid #e9e9e9;
   // overflow: scroll;
 
   background-color: #ffffff;
