--- a/researchf/src/assets/scss/_product-details.scss
+++ b/researchf/src/assets/scss/_product-details.scss
@@ -192,20 +192,100 @@
   left: 50%;
   top: 50%; 
   transform: translate(-50%, -50%);
-  width: 750px;
-  height: 600px;
-  z-index: 100;
+  width: 60%;
+  height: 90%;
+  z-index: 1051;
+  background-color: #fff;
+  border-radius: 15px;
+  padding: 20px;
+  overflow-y: scroll;
 }
 .portfolio-heading {
   display: flex;
+  height: 50px;
+  justify-content: space-around;
+}
+.portfolio-heading-name {
+  font-weight: 700;
+  font-size: 20px;
+  color: #303441;
+}
+.portfolio-close {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+}
+.portfolio-chat {
+  top: 10px;
+  right: 50px;
+  position: absolute;
+}
+.portfolio-chat-btn {
+  width: 100px;
+  height: 30px;
+  border: none;
+  background-color: #475CAF;
+  border-radius: 10px;
+  color: #fff;
+  font-weight: 500;
 }
 .portfolio-body {
   display: flex;
   height: 70%;
   overflow-y: scroll;
 }
+.portfolio-detail {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+.portfolio-detail::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera*/
+}
+.portfolio-body {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+.portfolio-body::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera*/
+}
+.portfolio-left {
+  width: 30%;
+  padding: 20px;
+}
+.portfolio-left-data {  
+  font-weight: 700;
+  font-size: 15px;
+  color: #303441;
+}
+.portfolio-right {
+  width: 60%;
+  text-align: right;
+}
+.portfolio-detail-img {
+  width: 450px;
+  margin-top: 24px;
+  border: 1px solid rgb(228, 229, 237);
+}
+.portfolio-hr {
+  height: 1px;
+  background-color: rgb(228, 229, 237);
+  width: 100%;
+  border: none;
+  margin: 40px 0px;
+}
 .portfolio-footer {
-  height: 20%;
+  padding: 20px;
+  height: 250px;
+  .single-image-port {
+    max-height: 175px;
+    border-radius: 8px;
+    border: 1px solid rgba(0, 0, 0, 0.05);
+  }
+}
+.portfolio-footer-name {  
+  font-weight: 700;
+  font-size: 15px;
+  color: #303441;
 }
 
 
